--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
 <body>
     <!-------------------- Шапка ---------------------->
     <header class="header">
-        <nav class="header-nav">
-            <a href="./index.html" class="header-logo">Web<span class="span-header-logo">Studio</span></a>
-            <ul class="header-list">
-                <li class="header-item"><a href="./index.html" class="link current">Студія</a></li>
-                <li class="header-item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
-                <li class="header-item"><a href="#" class="link">Контакти</a></li>
-            </ul>
-        </nav>
-<ul class="header-adress">
-    <li class="header-adress-item"><a href="mailto:info@devstudio.com" class="header-adress-link">info@devstudio.com</a></li>
-    <li class="header-adress-item"><a href="tel:+380961111111" class="header-adress-link">+38 096 111 11 11</a></li>
-</ul>
+        <div class="container header-container">
+            <nav class="header-nav">
+                <a href="./index.html" class="header-logo">Web<span class="span-header-logo">Studio</span></a>
+                <ul class="header-list">
+                    <li class="header-item"><a href="./index.html" class="link current">Студія</a></li>
+                    <li class="header-item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
+                    <li class="header-item"><a href="#" class="link">Контакти</a></li>
+                </ul>
+            </nav>
+    <ul class="header-adress">
+        <li class="header-adress-item"><a href="mailto:info@devstudio.com" class="header-adress-link">info@devstudio.com</a></li>
+        <li class="header-adress-item"><a href="tel:+380961111111" class="header-adress-link">+38 096 111 11 11</a></li>
+    </ul>
+        </div>
     </header>
     <main>
     <!-- Герой -->
