--- a/index.html
+++ b/index.html
@@ -38,73 +38,81 @@
 
 <!-- Чому ми? -->
     <section class="advantages">
-        <h2 class="visually-hidden">Чому ми?</h2>
-        <ul class="advantages-list">
-            <li class="advantages-item">
-                <h3 class="advantages-h-three">Увага до деталей</h3>
-                <p class="advantages-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-            </li>
-            <li class="advantages-item">
-                <h3 class="advantages-h-three">Пунктуальність</h3>
-                <p class="advantages-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-            </li>
-            <li class="advantages-item">
-                <h3 class="advantages-h-three">Планування</h3>
-                <p class="advantages-text">Так само консультація з широким активом значною мірою зумовлює.</p>
-            </li>
-            <li class="advantages-item">
-                <h3 class="advantages-h-three">Сучасні технології</h3>
-                <p class="advantages-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-            </li>
-        </ul>
+        <div class="container advantages-container">
+            <h2 class="visually-hidden">Чому ми?</h2>
+            <ul class="advantages-list">
+                <li class="advantages-item">
+                    <h3 class="advantages-h-three">Увага до деталей</h3>
+                    <p class="advantages-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                </li>
+                <li class="advantages-item">
+                    <h3 class="advantages-h-three">Пунктуальність</h3>
+                    <p class="advantages-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                </li>
+                <li class="advantages-item">
+                    <h3 class="advantages-h-three">Планування</h3>
+                    <p class="advantages-text">Так само консультація з широким активом значною мірою зумовлює.</p>
+                </li>
+                <li class="advantages-item">
+                    <h3 class="advantages-h-three">Сучасні технології</h3>
+                    <p class="advantages-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                </li>
+            </ul>
+        </div>
     </section>
 
 <!-- Чим ми займаємося -->
     <section class="about">
-        <h2 class="about-h-two">Чим ми займаємося</h2>
-        <ul class="about-list">
-            <li class="about-item"><img src="./images/program.jpg" alt="Програмування" width="370" height="294"></li>
-            <li class="about-item"><img src="./images/devise.jpg" alt="Адаптація" width="370" height="294"></li>
-            <li class="about-item"><img src="./images/color.jpg" alt="Дизайн" width="370" height="294"></li>
-        </ul>
+        <div class="container about-container">
+            <h2 class="about-h-two">Чим ми займаємося</h2>
+            <ul class="about-list">
+                <li class="about-item"><img src="./images/program.jpg" alt="Програмування" width="370" height="294"></li>
+                <li class="about-item"><img src="./images/devise.jpg" alt="Адаптація" width="370" height="294"></li>
+                <li class="about-item"><img src="./images/color.jpg" alt="Дизайн" width="370" height="294"></li>
+            </ul>
+        </div>
     </section>
     <!-- Команда -->
     <section class="team">
-        <h2 class="team-h-two">Наша команда</h2>
-        <ul class="team-list">
-            <li class="team-item">
-                <img src="./images/igor_demyanenko.jpg" alt="Ігор Дем'яненко" width="270" height="260">
-                <h3 class="team-h-three">Ігор Дем'яненко</h3>
-                <p class="team-text">Product Designer</p>
-            </li>
-            <li class="team-item">
-                <img src="./images/olga_repina.jpg" alt="Ольга Рєпіна" width="270" height="260">
-                <h3 class="team-h-three">Ольга Рєпіна</h3>
-                <p class="team-text">Frontend Developer</p>
-            </li>
-            <li class="team-item">
-                <img src="./images/mikola_tarasov.jpg" alt="Микола Тарасов" width="270" height="260">
-                <h3 class="team-h-three">Микола Тарасов</h3>
-                <p class="team-text">Marketing</p>
-            </li>
-            <li class="team-item">
-                <img src="./images/mihaylo_ermak.jpg" alt="Михайло Єрмаков" width="270" height="260">
-                <h3 class="team-h-three">Михайло Єрмаков</h3>
-                <p class="team-text">UI Designer</p>
-            </li>
-        </ul>
+        <div class="container team-container">
+            <h2 class="team-h-two">Наша команда</h2>
+            <ul class="team-list">
+                <li class="team-item">
+                    <img src="./images/igor_demyanenko.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+                    <h3 class="team-h-three">Ігор Дем'яненко</h3>
+                    <p class="team-text">Product Designer</p>
+                </li>
+                <li class="team-item">
+                    <img src="./images/olga_repina.jpg" alt="Ольга Рєпіна" width="270" height="260">
+                    <h3 class="team-h-three">Ольга Рєпіна</h3>
+                    <p class="team-text">Frontend Developer</p>
+                </li>
+                <li class="team-item">
+                    <img src="./images/mikola_tarasov.jpg" alt="Микола Тарасов" width="270" height="260">
+                    <h3 class="team-h-three">Микола Тарасов</h3>
+                    <p class="team-text">Marketing</p>
+                </li>
+                <li class="team-item">
+                    <img src="./images/mihaylo_ermak.jpg" alt="Михайло Єрмаков" width="270" height="260">
+                    <h3 class="team-h-three">Михайло Єрмаков</h3>
+                    <p class="team-text">UI Designer</p>
+                </li>
+            </ul>
+        </div>
     </section>
     </main>
     <!-- Укриття -->
     <footer class="footer">
-        <a href="./index.html" class="footer-logo">Web<span class="span-footer-logo">Studio</span></a>
-        <address class="address">
-    <ul class="footer-list">
-        <li class="footer-item"><a href="https://goo.gl/maps/U3GMHrHtX6qRxoSj9" rel="noopener nofollow noreferrer" target="_blank" class="map">м. Київ, пр-т Лесі Українки, 26</a></li>
-        <li class="footer-item"><a href="mailto:info@devstudio.com" class="footer-adress-link">info@devstudio.com</a></li>
-        <li class="footer-item"><a href="tel:+380961111111" class="footer-adress-link">+38 096 111 11 11</a></li>
-    </ul>
-        </address>
+        <div class="container footer-container">
+            <a href="./index.html" class="footer-logo">Web<span class="span-footer-logo">Studio</span></a>
+            <address class="address">
+        <ul class="footer-list">
+            <li class="footer-item"><a href="https://goo.gl/maps/U3GMHrHtX6qRxoSj9" rel="noopener nofollow noreferrer" target="_blank" class="map">м. Київ, пр-т Лесі Українки, 26</a></li>
+            <li class="footer-item"><a href="mailto:info@devstudio.com" class="footer-adress-link">info@devstudio.com</a></li>
+            <li class="footer-item"><a href="tel:+380961111111" class="footer-adress-link">+38 096 111 11 11</a></li>
+        </ul>
+            </address>
+        </div>
     </footer>
 </body>
 </html>
