--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -31,91 +32,135 @@
 <main>
     <!-------------------- Наші роботи ---------------------->
     <section class="works">
-        <h1 class="visually-hidden">Наші роботи</h1>
-        <ul class="works-list">
-            <li class="works-item"><button type="button" class="button-all btn">Усі</button></li>
-            <li class="works-item"><button type="button" class="button-web btn">Веб-сайти</button></li>
-            <li class="works-item"><button type="button" class="button-add btn">Додатки</button></li>
-            <li class="works-item"><button type="button" class="button-design btn">Дизайн</button></li>
-            <li class="works-item"><button type="button" class="button-mark btn">Маркетинг</button></li>
-        </ul>
-        <ul class="works-list">
-            <li class="works-item image-one">
-                    <a class="works-link" href="#1">
-                        <img src="./images/technokrak.jpg" alt="Технокряк" width="370" height="294">
-                        <h2 class="works-h-two">Технокряк</h2>
-                        <p class="works-text">Веб-сайт</p>
-                    </a>
-            </li>
-            <li class="works-item image-two">
+        <div class="container works-container">
+            <h1 class="visually-hidden">Наші роботи</h1>
+            <div class="works-list-btn">
+                <ul class="works-list-top">
+                    <li class="works-item-top"><button type="button" class="button-all btn">Усі</button></li>
+                    <li class="works-item-top"><button type="button" class="button-web btn">Веб-сайти</button></li>
+                    <li class="works-item-top"><button type="button" class="button-add btn">Додатки</button></li>
+                    <li class="works-item-top"><button type="button" class="button-design btn">Дизайн</button></li>
+                    <li class="works-item-top"><button type="button" class="button-mark btn">Маркетинг</button></li>
+                </ul>
+            </div>
+            <div class="works-list-card">
+                <ul class="works-list-bottom">
+                    <li class="works-item-bottom cards">
+                            <a class="works-link" href="#1">
+                                <div class="photo">
+                                    <img src="./images/technokrak.jpg" alt="Технокряк" width="370" height="294">
+                                </div>
+                                <div class="border-text-card">
+                                    <h2 class="works-h-two">Технокряк</h2>
+                                    <p class="works-text">Веб-сайт</p>
+                                </div>
+                            </a>
+                    </li>
+                    <li class="works-item-bottom cards">
                     <a class="works-link" href="#2">
-                        <img src="./images/basketball.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
-                        <h2 class="works-h-two">Постер New Orlean vs Golden Star</h2>
-                        <p class="works-text">Дизайн</p>
-                    </a>    
-            </li>
-            <li class="works-item image-three">
-                    <a class="works-link" href="#3">
-                        <img src="./images/restaurant.jpg" alt="Ресторан Seafood" width="370" height="294">
-                        <h2 class="works-h-two">Ресторан Seafood</h2>
-                        <p class="works-text">Додаток</p>
-                    </a>
-            </li>
-            <li class="works-item image-four">
-                    <a class="works-link" href="#4">
-                        <img src="./images/voise.jpg" alt="Проєкт Prime" width="370" height="294">
-                        <h2 class="works-h-two">Проєкт Prime</h2>
-                        <p class="works-text">Маркетинг</p>
-                    </a>
-            </li>
-            <li class="works-item image-five">
-                    <a class="works-link" href="#5">
-                        <img src="./images/boxes.jpg" alt="Проєкт Boxes" width="370" height="294">
-                        <h2 class="works-h-two">Проєкт Boxes</h2>
-                        <p class="works-text">Додаток</p>
-                    </a>
-            </li>
-            <li class="works-item image-six">
-                    <a class="works-link" href="#6">
-                        <img src="./images/computer.jpg" alt="Inspiration has no Borders" width="370" height="294">
-                        <h2 class="works-h-two">Inspiration has no Borders</h2>
-                        <p class="works-text">Веб-сайт</p>
-                    </a>
-            </li>
-            <li class="works-item image-seven">
-                    <a class="works-link" href="#7">
-                        <img src="./images/book.jpg" alt="Видання Limited Edition" width="370" height="294">
-                        <h2 class="works-h-two">Видання Limited Edition</h2>
-                        <p class="works-text">Дизайн</p>
-                    </a>
-            </li>
-            <li class="works-item image-eight">
-                    <a class="works-link" href="#8">
-                        <img src="./images/ticket.jpg" alt="Проєкт LAB" width="370" height="294">
-                        <h2 class="works-h-two">Проєкт LAB</h2>
-                        <p class="works-text">Маркетинг</p>
-                    </a>
-            </li>
-            <li class="works-item image-nine">
-                    <a class="works-link" href="#9">
-                        <img src="./images/laptop.jpg" alt="Growing Business" width="370" height="294">
-                        <h2 class="works-h-two">Growing Business</h2>
-                        <p class="works-text">Додаток</p>
-                    </a>
-            </li>
-        </ul>
+                                <div class="photo">
+                                    <img src="./images/basketball.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                                </div>
+                                <div class="border-text-card">
+                                    <h2 class="works-h-two">Постер New Orlean vs Golden Star</h2>
+                                    <p class="works-text">Дизайн</p>
+                                </div>
+                            </a>    
+                    </li>
+                    <li class="works-item-bottom cards">
+                            <a class="works-link" href="#3">
+                                <div class="photo">
+                                    <img src="./images/restaurant.jpg" alt="Ресторан Seafood" width="370" height="294">
+                                </div>
+                                <div class="border-text-card">
+                                    <h2 class="works-h-two">Ресторан Seafood</h2>
+                                    <p class="works-text">Додаток</p>
+                                </div>
+                            </a>
+                    </li>
+                    <li class="works-item-bottom cards">
+                            <a class="works-link" href="#4">
+                                <div class="photo">
+                                    <img src="./images/voise.jpg" alt="Проєкт Prime" width="370" height="294">
+                                </div>
+                                <div class="border-text-card">
+                                    <h2 class="works-h-two">Проєкт Prime</h2>
+                                    <p class="works-text">Маркетинг</p>
+                                </div>
+                            </a>
+                    </li>
+                    <li class="works-item-bottom cards">
+                            <a class="works-link" href="#5">
+                                <div class="photo">
+                                    <img src="./images/boxes.jpg" alt="Проєкт Boxes" width="370" height="294">
+                                </div>
+                                <div class="border-text-card">
+                                    <h2 class="works-h-two">Проєкт Boxes</h2>
+                                    <p class="works-text">Додаток</p>
+                                </div>
+                            </a>
+                    </li>
+                    <li class="works-item-bottom cards">
+                            <a class="works-link" href="#6">
+                                <div class="photo">
+                                    <img src="./images/computer.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                                </div>
+                                <div class="border-text-card">
+                                    <h2 class="works-h-two">Inspiration has no Borders</h2>
+                                    <p class="works-text">Веб-сайт</p>
+                                </div>
+                            </a>
+                    </li>
+                    <li class="works-item-bottom cards">
+                            <a class="works-link" href="#7">
+                                <div class="photo">
+                                    <img src="./images/book.jpg" alt="Видання Limited Edition" width="370" height="294">
+                                </div>
+                                <div class="border-text-card">
+                                    <h2 class="works-h-two">Видання Limited Edition</h2>
+                                    <p class="works-text">Дизайн</p>
+                                </div>
+                            </a>
+                    </li>
+                    <li class="works-item-bottom cards">
+                            <a class="works-link" href="#8">
+                                <div class="photo">
+                                    <img src="./images/ticket.jpg" alt="Проєкт LAB" width="370" height="294">
+                                </div>
+                                <div class="border-text-card">
+                                    <h2 class="works-h-two">Проєкт LAB</h2>
+                                    <p class="works-text">Маркетинг</p>
+                                </div>
+                            </a>
+                    </li>
+                    <li class="works-item-bottom cards">
+                            <a class="works-link" href="#9">
+                                <div class="photo">
+                                    <img src="./images/laptop.jpg" alt="Growing Business" width="370" height="294">
+                                </div>
+                                <div class="border-text-card">
+                                    <h2 class="works-h-two">Growing Business</h2>
+                                    <p class="works-text">Додаток</p>
+                                </div>
+                            </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </section>
 </main>
     <!-------------------- Укриття ---------------------->
     <footer class="footer">
-        <a href="./index.html" class="footer-logo">Web<span class="span-footer-logo">Studio</span></a>
-        <address class="address">
-    <ul class="footer-list">
-        <li class="footer-item"><a href="https://goo.gl/maps/U3GMHrHtX6qRxoSj9" rel="noopener nofollow noreferrer" target="_blank" class="map">м. Київ, пр-т Лесі Українки, 26</a></li>
-        <li class="footer-item"><a href="mailto:info@devstudio.com" class="footer-adress-link">info@devstudio.com</a></li>
-        <li class="footer-item"><a href="tel:+380961111111" class="footer-adress-link">+38 096 111 11 11</a></li>
-    </ul>
-        </address>
+        <div class="container footer-container">
+            <a href="./index.html" class="footer-logo">Web<span class="span-footer-logo">Studio</span></a>
+            <address class="address">
+        <ul class="footer-list">
+            <li class="footer-item"><a href="https://goo.gl/maps/U3GMHrHtX6qRxoSj9" rel="noopener nofollow noreferrer" target="_blank" class="map">м. Київ, пр-т Лесі Українки, 26</a></li>
+            <li class="footer-item"><a href="mailto:info@devstudio.com" class="footer-adress-link">info@devstudio.com</a></li>
+            <li class="footer-item"><a href="tel:+380961111111" class="footer-adress-link">+38 096 111 11 11</a></li>
+        </ul>
+            </address>
+        </div>
     </footer>
 </body>
 </html>
