--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
     <!-- Герой -->
     <section class="hero">
-        <h1 class="hero-h-one">Ефективні рішення для<br> вашого бізнесу</h1>
+        <h1 class="hero-h-one">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="hero-btn">Замовити послугу</button>
     </section>
 
